<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/newPost"
        style="@style/Widget.Material3.AppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:menu="@menu/menu_accept"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            app:title="@string/newPost"
            app:titleCentered="true" />
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutPostText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:hintEnabled="false"
        app:layout_constraintStart_toStartOf="parent"
        app:boxBackgroundMode="none"
        app:layout_constraintTop_toBottomOf="@+id/newPost">

        <EditText
            android:id="@+id/newPostText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/addText"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.chip.Chip
        android:id="@+id/buttonAddImage"
        style="@style/Widget.Material3.Chip.Assist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/addImage"
        app:chipIcon="@drawable/ic_add_photo_alternate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutPostText" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/createPostRecycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAddImage"
        tools:listitem="@layout/item_add_image" />

</androidx.constraintlayout.widget.ConstraintLayout>